src/test/deca/lexique/invalid/at_interdit.deca
// Description:
//    ecrire @ dans un programme deca
// Resultats:
// Character entered is illegal !
// Historique:
//    cree le 01/01/2021

{
    bool c;
    @;
}
